# mupdf-cmake

./: CMakeLists.txt  File.cpp  File.h  README.md  main.cpp  mupdf.c  mupdf.h  util-memopen.c  util-memopen.h
scripts/freetype/: slimftmodules.h
